# alfred-gdfid-finder

./: .cursorrules  .gitignore  CLAUDE.md  README.md  project-bootstrap-prompt.md  pyproject.toml
src/gdfid_finder/: __init__.py  __main__.py  db_finder.py  finder.py  main.py  utils.py
tests/: conftest.py  test_db_finder.py  test_finder.py  test_main.py  test_utils.py
workflow/: info.plist  run.py
