[project]
name = "alfred-gdfid-finder"
version = "0.1.0"
description = "Alfred Workflow to reveal Google Drive files in Finder by file ID"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "cyberdoctor" }]
keywords = ["alfred", "google-drive", "macos", "finder"]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
gdfid-finder = "gdfid_finder.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gdfid_finder"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-v",
    "--cov=gdfid_finder",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]

[tool.ruff]
target-version = "py39"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "UP006",  # Use `list` instead of `List` - keep for Python 3.9 compat
    "UP007",  # Use `X | Y` instead of `Union[X, Y]` - keep for Python 3.9 compat
    "UP035",  # `typing.List` is deprecated - keep for Python 3.9 compat
    "UP045",  # Use `X | None` instead of `Optional[X]` - keep for Python 3.9 compat
]

[tool.ruff.lint.isort]
known-first-party = ["gdfid_finder"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
packages = ["gdfid_finder"]
mypy_path = ["src"]

[tool.coverage.run]
source = ["src/gdfid_finder"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
